# apex-metaenv

./: .dockerignore  .env.example  .gitignore  00_GENERATION_COMPLETE.md  ADVANCED_FEATURES_QUICK_REFERENCE.md  APEX_ADVANCED_FEATURES_BUILD_SUMMARY.md  APEX_CONTROL_CENTER.md  APEX_DOCKER_QUICKSTART.md  APEX_DOCKER_SEPARATE_PROJECT.md  APEX_DOCKER_STANDALONE_SUMMARY.md  ARCHITECTURE.md  BACKEND_SETUP.md  CHECKLIST.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_ADVANCED_FEATURES_GUIDE.md  DEPENDENCIES_INSTALLED.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT_SUMMARY.md  DOCKER_SETUP.md  DOCKER_STANDALONE_SETUP.md  Dockerfile  Dockerfile.apex  Dockerfile.apex.standalone  EMAIL_INTEGRATION.md  FASTAPI_SUMMARY.md  FILES_GENERATED.md  GENERATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INSTALLATION_CHECKLIST.md  NEW_APEX_FILES_INDEX.md  PHASE_4_SUMMARY.md  PIPELINE_INTEGRATION_GUIDE.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_STATUS.txt  PROJECT_INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.py  QUICK_REFERENCE_CARD.md  README.md  (+88 more)
apex-docker/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt  start.bat  start.sh
apex_env/: __init__.py  code_generator.py  command_executor.py  content_summarizer.py  email_provider.py  environment.py  frontend_api.py  search_provider.py  secure_auth.py  state.py  vscode_debugger.py  whatsapp_integration.py
apex_env/graders/: __init__.py  base_grader.py  email_grader.py  meeting_grader.py  workflow_grader.py
apex_env/models/: __init__.py  schemas.py
apex_env/tasks/: __init__.py  base_task.py  complex_task.py  email_task.py  meeting_task.py
envs/code_solver_env/: Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/code_solver_env/server/: __init__.py  app.py  code_solver_environment.py  enhanced_app.py  enhanced_models.py  problems.py  rewards.py  sandbox.py  streaming.py
envs/screen_task_env/: Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/screen_task_env/server/: __init__.py  app.py  screen_task_environment.py  tasks.py
server/: app.py
sessions/: 3cae5d56-ef10-41da-8d84-69e23ba1d0ed.json
