[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-code-solver"
version = "2.0.0"
description = "RL environment for training agents to solve LeetCode-style coding problems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Team APEX", email = "team@apex.local"}
]
license = {text = "MIT"}

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "gradio>=4.0.0",
]

[project.scripts]
server = "app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Repository = "https://huggingface.co/spaces/ShaikB/apex-code-solver"
Homepage = "https://ShaikB-apex-code-solver.hf.space"

[tool.setuptools]
packages = ["envs"]

[tool.openenv]
name = "apex-engineering-benchmark"
version = "3.0.0"
spec = "openenv/v1"
