[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-engineering-benchmark"
version = "3.0.0"
description = "Real-world RL benchmark for engineering tasks"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
server = "app:main"

[tool.setuptools]
py-modules = ["app", "environment", "models", "graders", "tasks"]
